--- a/OrderService.Contracts/OrderService.Contracts.csproj
+++ b/OrderService.Contracts/OrderService.Contracts.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Title>OrderService.Contracts</Title>
+        <Authors>nikitaberezhko</Authors>
+        <RepositoryUrl>https://github.com/nikitaberezhko/Logistic-OrderService.Contracts</RepositoryUrl>
     </PropertyGroup>
 
 </Project>
